--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,32 @@ desktop.ini
 .metadata
 *.iml
 *.ipr
+*.iws
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+HELP.md
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
+
+### STS ###
+.apt_generated
+.factorypath
+.springBeans
+.sts4-cache
+
+### VS Code ###
+.vscode/
 
 # Images
 *.jpg
@@ -76,4 +102,3 @@ desktop.ini
 *.eot
 *.ttf
 *.woff
-/target/
